[gd_scene load_steps=39 format=3 uid="uid://2kgbljbick46"]

[ext_resource type="Texture2D" uid="uid://d0qprecnoaqpf" path="res://assets/Orc/Orc-Attack01.png" id="1_1edxe"]
[ext_resource type="Texture2D" uid="uid://cn52lq05j6t1s" path="res://assets/Orc/Orc-Idle.png" id="1_tjrei"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_x36he"]
[ext_resource type="Texture2D" uid="uid://cljvnx7ijbuch" path="res://assets/Orc/Orc-Death.png" id="2_pttj3"]
[ext_resource type="Texture2D" uid="uid://bvp85o1wjqk2" path="res://assets/Orc/Orc-Hurt.png" id="3_h0ix1"]
[ext_resource type="Texture2D" uid="uid://drv14bcohjsmg" path="res://assets/Orc/Orc-Walk.png" id="5_tcchv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q7qw1"]
atlas = ExtResource("1_1edxe")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b467p"]
atlas = ExtResource("1_1edxe")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh07b"]
atlas = ExtResource("1_1edxe")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wcb3"]
atlas = ExtResource("1_1edxe")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhshh"]
atlas = ExtResource("1_1edxe")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwo6f"]
atlas = ExtResource("1_1edxe")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjx4a"]
atlas = ExtResource("2_pttj3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkml0"]
atlas = ExtResource("2_pttj3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj82b"]
atlas = ExtResource("2_pttj3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mph6v"]
atlas = ExtResource("2_pttj3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg7ec"]
atlas = ExtResource("3_h0ix1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x647x"]
atlas = ExtResource("3_h0ix1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3by4m"]
atlas = ExtResource("3_h0ix1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5lo5"]
atlas = ExtResource("3_h0ix1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3jox"]
atlas = ExtResource("1_tjrei")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uhmg"]
atlas = ExtResource("1_tjrei")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwc8b"]
atlas = ExtResource("1_tjrei")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxv4u"]
atlas = ExtResource("1_tjrei")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7jir"]
atlas = ExtResource("1_tjrei")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aejrr"]
atlas = ExtResource("1_tjrei")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jqwa"]
atlas = ExtResource("5_tcchv")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd3wn"]
atlas = ExtResource("5_tcchv")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u04qo"]
atlas = ExtResource("5_tcchv")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb8k2"]
atlas = ExtResource("5_tcchv")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwwdq"]
atlas = ExtResource("5_tcchv")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn1rn"]
atlas = ExtResource("5_tcchv")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvr7m"]
atlas = ExtResource("5_tcchv")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m87n"]
atlas = ExtResource("5_tcchv")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_djeaj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7qw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b467p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh07b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wcb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhshh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwo6f")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjx4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkml0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj82b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mph6v")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg7ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x647x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3by4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5lo5")
}],
"loop": true,
"name": &"hurt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3jox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uhmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwc8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxv4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7jir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aejrr")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jqwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd3wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u04qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb8k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwwdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn1rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvr7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m87n")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_48ujt"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ge7y5"]
radius = 57.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gos2i"]

[node name="enemy" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_x36he")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_djeaj")
animation = &"hurt"
frame_progress = 0.905625

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_48ujt")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ge7y5")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_gos2i")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.6

[node name="death_time" type="Timer" parent="."]
wait_time = 0.8

[node name="attack_time" type="Timer" parent="."]
wait_time = 3.0

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.29451, 0.774665, 0.305296, 1)
offset_left = -9.0
offset_top = -14.0
offset_right = 171.0
offset_bottom = 13.0
scale = Vector2(0.1, 0.1)
value = 100.0
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="death_time" to="." method="_on_death_time_timeout"]
[connection signal="timeout" from="attack_time" to="." method="_on_attack_time_timeout"]
